// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnchorLink component renders default correctly 1`] = `
<a
  class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
  href="/"
>
  <span>
    BMI Group
  </span>
</a>
`;

exports[`AnchorLink component renders disabled correctly 1`] = `
<a
  class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink Anchorlink--disabled MuiTypography-colorPrimary"
  href="/"
>
  <span>
    BMI Group
  </span>
</a>
`;

exports[`AnchorLink component renders icon disabled correctly 1`] = `
<a
  class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink Anchorlink--disabled MuiTypography-colorPrimary"
  href="/"
>
  <span>
    BMI Group
  </span>
  <svg
    aria-hidden="true"
    class="icon"
    focusable="false"
  />
</a>
`;

exports[`AnchorLink component renders leading icon correctly 1`] = `
<a
  class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
  href="/"
>
  <svg
    aria-hidden="true"
    class="icon"
    focusable="false"
  />
  <span>
    BMI Group
  </span>
</a>
`;

exports[`AnchorLink component renders multi-line with icon correctly 1`] = `
<a
  class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
  href="/"
>
  <span>
    <p
      style="width: 300px; text-align: left;"
    >
      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
    </p>
  </span>
  <svg
    aria-hidden="true"
    class="icon"
    focusable="false"
  />
</a>
`;

exports[`AnchorLink component renders trailing icon correctly 1`] = `
<a
  class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
  href="/"
>
  <span>
    BMI Group
  </span>
  <svg
    aria-hidden="true"
    class="icon"
    focusable="false"
  />
</a>
`;
